<resources>
    <string name="app_name">Desi Cuisine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="userMenu">Customer Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="p1">Team Desi Cuisine built the Desi Cuisine app as a Free app. This SERVICE is provided by Team Desi Cuisine at no cost and is intended for use as is.</string>
    <string name="p2">This page is used to inform users regarding policies with the collection, use, and disclosure of Personal Information if anyone decided to use this Service.</string>
    <string name="p3">If you choose to use this Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</string>
    <string name="p4">For a better experience, while using our Service, We may require you to provide us with certain personally identifiable information, including but not limited to Nothing.</string>
    <string name="p5">The app does use third party services that may collect information used to identify you.</string>
    <string name="team_Name">Team Desi Cuisine</string>
    <string name="developer_email">umerfarooq7111@gmail.com</string>


</resources>
