<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/app_back"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="@dimen/appPading"
            android:paddingLeft="@dimen/appPading"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/alert_logo_size"
                android:layout_height="@dimen/alert_logo_size"
                android:layout_margin="@dimen/topMargin"
                android:src="@drawable/logo_app" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/contentSize" />


            <TextView
                android:id="@+id/alertTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/p1"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/newContentSize" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/p2"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/newContentSize" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p3"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/newContentSize" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="Information Collection and Use"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/contentSize" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/p4"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/newContentSize" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/newContentSize" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical">


                <Button
                    android:id="@+id/closeAboutAlertBtn"
                    style="@style/ButtonClick"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="close" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
